tests/failing/checker/fn_mut_arg.ri
fn func(mut a: i32) void { }

fn main() void { }
